--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <!-- Text -->
     <div>
-      <img src="https://i.ibb.co/KpqHzJr1/Gemini-Generated-Image-6v7wwx6v7wwx6v7w.png" class="w-56 mb-10" />
+      <img src="https://i.ibb.co/H5hKCc1/Gemini-Generated-Image-wg98ewg98ewg98ew.png" class="w-56 h-56 mb-10 rounded-full border border-white/20 shadow-2xl" />
 
       <span class="inline-flex items-center gap-2 px-5 py-2 rounded-full text-sm font-semibold glass text-[#C8A845] mb-6">
         🇳🇬 Launching in Nigeria
@@ -145,6 +145,40 @@
   </div>
 </section>
 
+<!-- TEAM -->
+<section class="px-6 py-28">
+  <div class="max-w-5xl mx-auto text-center">
+    <h2 class="text-4xl md:text-5xl font-extrabold brand-font mb-6">The Founder</h2>
+    <p class="text-lg text-slate-300 mb-16">Built by a product-minded operator obsessed with efficiency, trust, and systems.</p>
+
+    <div class="max-w-3xl mx-auto">
+      <div class="glass rounded-3xl p-10 md:p-14 flex flex-col md:flex-row items-center gap-10">
+        <!-- Founder Image -->
+        <div class="relative">
+          <div class="absolute -inset-2 rounded-full bg-gradient-to-tr from-[#356D39]/50 to-[#C8A845]/40 blur-xl"></div>
+          <img src="https://i.ibb.co/m5cYkv1P/ana.jpg" alt="Bello Garba (Mamuddeen)" class="relative w-48 h-48 object-cover rounded-full border border-white/20 shadow-2xl" />
+        </div>
+
+        <!-- Founder Bio -->
+        <div class="text-center md:text-left">
+          <h3 class="text-2xl font-bold mb-1">Bello Garba</h3>
+          <p class="text-[#C8A845] font-semibold mb-4">Founder · Mamuddeen</p>
+
+          <p class="text-slate-300 leading-relaxed mb-6">
+            Bello Garba, popularly known as <strong>Mamuddeen</strong>, is a systems-focused builder with a background in <strong>Virtual Assistance</strong> and <strong>Data Analytics</strong>. He combines operational execution with analytical thinking to design scalable, trust-driven platforms for everyday problems.
+          </p>
+
+          <div class="flex flex-wrap justify-center md:justify-start gap-3">
+            <span class="px-4 py-2 rounded-full text-sm glass">Virtual Assistant</span>
+            <span class="px-4 py-2 rounded-full text-sm glass">Data Analyst</span>
+            <span class="px-4 py-2 rounded-full text-sm glass">Product & Operations</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <!-- FINAL CTA -->
 <section class="px-6 py-32 text-center">
   <h2 class="text-5xl font-extrabold brand-font mb-8">Start Saving Together</h2>
@@ -163,7 +197,7 @@
 
 <!-- FOOTER -->
 <footer class="px-6 py-16 border-t border-white/10 text-center text-sm text-slate-400">
-  <img src="https://i.ibb.co/KpqHzJr1/Gemini-Generated-Image-6v7wwx6v7wwx6v7w.png" class="w-44 mx-auto mb-4" />
+  <img src="https://i.ibb.co/H5hKCc1/Gemini-Generated-Image-wg98ewg98ewg98ew.png" class="w-44 h-44 mx-auto mb-4 rounded-full border border-white/20 shadow-xl" />
   <p>© BulkSense · Buy Smarter. Together.</p>
 </footer>
 
