--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <!-- Text -->
     <div>
-      <img src="https://i.ibb.co/H5hKCc1/Gemini-Generated-Image-wg98ewg98ewg98ew.png" class="w-56 h-56 mb-10 rounded-full border border-white/20 shadow-2xl" />
+      <img src="https://i.ibb.co/H5hKCc1/Gemini-Generated-Image-wg98ewg98ewg98ew.png" class="w-30 h-30 mb-10 rounded-full border border-white/20 shadow-2xl" />
 
       <span class="inline-flex items-center gap-2 px-5 py-2 rounded-full text-sm font-semibold glass text-[#C8A845] mb-6">
         🇳🇬 Launching in Nigeria
@@ -197,9 +197,11 @@
 
 <!-- FOOTER -->
 <footer class="px-6 py-16 border-t border-white/10 text-center text-sm text-slate-400">
-  <img src="https://i.ibb.co/H5hKCc1/Gemini-Generated-Image-wg98ewg98ewg98ew.png" class="w-44 h-44 mx-auto mb-4 rounded-full border border-white/20 shadow-xl" />
+  <img src="https://i.ibb.co/H5hKCc1/Gemini-Generated-Image-wg98ewg98ewg98ew.png" class="w-20 h-20 mx-auto mb-4 rounded-full border border-white/20 shadow-xl" />
   <p>© BulkSense · Buy Smarter. Together.</p>
+  <p href="wa.me/2348034361458"><emp>WhatApp: </emp>08034361458</p>
 </footer>
 
 </body>
 </html>
+
