--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 
       <div class="flex flex-wrap gap-4">
         <button class="px-9 py-4 rounded-xl text-lg font-bold text-white shadow-2xl transition hover:scale-105"
-          style="background:#356D39">
+          style="background:#356D39" href="https://forms.gle/6VkkMAAQ2Uwhj3CZA">
           Join a Buying Group
         </button>
-        <button class="px-9 py-4 rounded-xl text-lg font-semibold border border-[#C8A845] text-[#C8A845] hover:bg-[#C8A845]/10">
+        <button class="px-9 py-4 rounded-xl text-lg font-semibold border border-[#C8A845] text-[#C8A845] hover:bg-[#C8A845]/10" href="https://forms.gle/6VkkMAAQ2Uwhj3CZA">
           How It Works
         </button>
       </div>
@@ -186,10 +186,10 @@
 
   <div class="flex justify-center gap-6 flex-wrap">
     <button class="px-12 py-5 rounded-2xl text-xl font-bold text-white shadow-2xl hover:scale-105 transition"
-      style="background:#356D39">
+      style="background:#356D39" href="https://forms.gle/6VkkMAAQ2Uwhj3CZA">
       Join a Buying Group
     </button>
-    <button class="px-12 py-5 rounded-2xl text-xl font-bold border border-[#C8A845] text-[#C8A845] hover:bg-[#C8A845]/10">
+    <button class="px-12 py-5 rounded-2xl text-xl font-bold border border-[#C8A845] text-[#C8A845] hover:bg-[#C8A845]/10" href="https://forms.gle/6VkkMAAQ2Uwhj3CZA">
       Join the Waitlist
     </button>
   </div>
@@ -204,5 +204,6 @@
 
 </body>
 </html>
+
 
 
