--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <a href="https://forms.gle/6VkkMAAQ2Uwhj3CZA"
          class="px-5 py-2 rounded-xl text-white font-bold"
          style="background:#356D39">
-        Join Group
+        Join Waitlist
       </a>
     </div>
 
@@ -69,7 +69,7 @@
       <a href="https://forms.gle/6VkkMAAQ2Uwhj3CZA"
          class="block text-center px-5 py-3 rounded-xl text-white font-bold"
          style="background:#356D39">
-        Join a Buying Group
+        Join our Waitlist
       </a>
     </div>
   </div>
@@ -336,3 +336,4 @@
 
 </body>
 </html>
+
