--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <div class="max-w-6xl mx-auto grid lg:grid-cols-2 gap-14 items-center">
     <div>
       <span class="inline-flex px-4 py-2 rounded-full text-sm font-semibold glass text-[#C8A845] mb-6">
-        🇳🇬 Launching in Nigeria
+        Launching in Nigeria
       </span>
 
       <h1 class="text-4xl md:text-6xl xl:text-7xl font-extrabold brand-font mb-6">
@@ -95,7 +95,7 @@
         <a href="https://forms.gle/6VkkMAAQ2Uwhj3CZA"
            class="px-8 py-4 rounded-xl text-lg font-bold text-white"
            style="background:#356D39">
-          Join a Buying Group
+          Join our Waitlist
         </a>
         <a href="#how-it-works"
            class="px-8 py-4 rounded-xl text-lg font-semibold border border-[#C8A845] text-[#C8A845]">
@@ -336,4 +336,5 @@
 
 </body>
 </html>
+
 
