--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         </div>
       </div>
       <div class="glass rounded-2xl overflow-hidden">
-        <img src="https://images.unsplash.com/photo-1556742049-0cfed4f6a45d?w=600&fit=crop" class="h-44 w-full object-cover" />
+        <img src="https://i.ibb.co/nsrvZxQ3/Gemini-Generated-Image-iqm0dniqm0dniqm0.png" />
         <div class="p-6">
           <h3 class="font-bold mb-2">No Coordination</h3>
           <p class="text-sm text-slate-300">Communities lack buying infrastructure.</p>
@@ -336,5 +336,6 @@
 
 </body>
 </html>
+
 
 
